--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,11 @@
     "[typescript]": {
         "editor.codeActionsOnSave": {
             "source.fixAll.eslint": true
-        }
+        },
+        "editor.tabSize": 2
+    },
+    "[prisma]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "Prisma.prisma"
     }
 }
